added logos and restructured bits

--- a/index.html
+++ b/index.html
@@ -26,47 +26,15 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="website-content/pages/about.html">About</a></li>
                     <li><a href="website-content/pages/resources.html">Resources</a></li>
+                    <li><a href="website-content/pages/about.html">About</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <main>
-        <section class="hero">
-            <h2>[Main headline]</h2>
-            <p>[Short intro text for the landing page.]</p>
-        </section>
-
-        <section class="quick-links">
-            <h2>[Quick access]</h2>
-            <div class="card-grid">
-                <div class="card">
-                    <h3>[Primary resource]</h3>
-                    <p>[One-line description]</p>
-                    <a href="#" class="btn btn-primary">[Button]</a>
-                </div>
-                
-                <div class="card">
-                    <h3>[Secondary resource]</h3>
-                    <p>[One-line description]</p>
-                    <a href="#" class="btn btn-primary">[Button]</a>
-                </div>
-                
-                <div class="card">
-                    <h3>[Lesson plans]</h3>
-                    <p>[One-line description]</p>
-                    <a href="website-content/pages/resources.html" class="btn btn-primary">[Button]</a>
-                </div>
-            </div>
-        </section>
-
-        <section class="about-preview">
-            <h2>[About section]</h2>
-            <p>[Short project summary.]</p>
-            <a href="website-content/pages/about.html" class="btn btn-secondary">[Learn more]</a>
-        </section>
+    <main id="page-content" data-page="home">
+        <!-- Home content is loaded from website-content/pages/home.html -->
     </main>
 
     <footer>
