--- a/website-content/pages/home.html
+++ b/website-content/pages/home.html
@@ -4,31 +4,45 @@
     <p>Access curriculum materials, Moodle courses, and detailed lesson plans all in one place.</p>
 </section>
 
+<section class="hero">
+    <h2>[Main headline]</h2>
+    <p>[Short intro text for the landing page.]</p>
+</section>
+
+<section class="logo-strip">
+    <div class="logo-row">
+        <img src="../images/logos/INNODEMS_logo.png" alt="INNODEMS logo">
+        <img src="../images/logos/KMS_logo.png" alt="Kenya Mathematical Society logo">
+        <img src="../images/logos/IDEMS_logo.png" alt="IDEMS International logo">
+    </div>
+    <p class="logo-caption">Developped jointly by INNODEMS, the Kenya Mathematical Society (KMS), and IDEMS International</p>
+</section>
+
 <section class="quick-links">
-    <h2>Quick Access</h2>
+    <h2>[Quick access]</h2>
     <div class="card-grid">
         <div class="card">
-            <h3>📚 PreTeXt Book</h3>
-            <p>Complete Grade 10 mathematics curriculum in an interactive digital textbook format.</p>
-            <a href="#" class="btn btn-primary">Access Book</a>
+            <h3>[Primary resource]</h3>
+            <p>[One-line description]</p>
+            <a href="#" class="btn btn-primary">[Button]</a>
         </div>
         
         <div class="card">
-            <h3>🎓 Understanding CBC Maths</h3>
-            <p>A comprehensive Moodle course on the Competency-Based Curriculum approach to mathematics.</p>
-            <a href="#" class="btn btn-primary">Start Course</a>
+            <h3>[Secondary resource]</h3>
+            <p>[One-line description]</p>
+            <a href="#" class="btn btn-primary">[Button]</a>
         </div>
         
         <div class="card">
-            <h3>📝 Lesson Plans</h3>
-            <p>Chapter-by-chapter Moodle courses with detailed lesson plans and teaching guides.</p>
-            <a href="website-content/pages/resources.html" class="btn btn-primary">Browse Lessons</a>
+            <h3>[Lesson plans]</h3>
+            <p>[One-line description]</p>
+            <a href="../pages/resources.html" class="btn btn-primary">[Button]</a>
         </div>
     </div>
 </section>
 
 <section class="about-preview">
-    <h2>About This Project</h2>
-    <p>This project provides Kenyan mathematics teachers with easy access to high-quality, curriculum-aligned resources for Grade 10 CBC Mathematics. All materials are designed to support effective teaching and student learning outcomes.</p>
-    <a href="website-content/pages/about.html" class="btn btn-secondary">Learn More</a>
+    <h2>[About section]</h2>
+    <p>[Short project summary.]</p>
+    <a href="../pages/about.html" class="btn btn-secondary">[Learn more]</a>
 </section>
