added instruction to edit and preview to readme and fixed paths to images!

--- a/website-content/pages/home.html
+++ b/website-content/pages/home.html
@@ -11,9 +11,9 @@
 
 <section class="logo-strip">
     <div class="logo-row">
-        <img src="../images/logos/INNODEMS_logo.png" alt="INNODEMS logo">
-        <img src="../images/logos/KMS_logo.png" alt="Kenya Mathematical Society logo">
-        <img src="../images/logos/IDEMS_logo.png" alt="IDEMS International logo">
+        <img src="website-content/images/logos/INNODEMS_logo.png" alt="INNODEMS logo">
+        <img src="website-content/images/logos/KMS_logo.png" alt="Kenya Mathematical Society logo">
+        <img src="website-content/images/logos/IDEMS_logo.png" alt="IDEMS International logo">
     </div>
     <p class="logo-caption">Developped jointly by INNODEMS, the Kenya Mathematical Society (KMS), and IDEMS International</p>
 </section>
@@ -36,7 +36,7 @@
         <div class="card">
             <h3>[Lesson plans]</h3>
             <p>[One-line description]</p>
-            <a href="../pages/resources.html" class="btn btn-primary">[Button]</a>
+            <a href="website-content/pages/resources.html" class="btn btn-primary">[Button]</a>
         </div>
     </div>
 </section>
@@ -44,5 +44,5 @@
 <section class="about-preview">
     <h2>[About section]</h2>
     <p>[Short project summary.]</p>
-    <a href="../pages/about.html" class="btn btn-secondary">[Learn more]</a>
+    <a href="website-content/pages/about.html" class="btn btn-secondary">[Learn more]</a>
 </section>
