Home Page content and styling first run

--- a/website-content/pages/resources.html
+++ b/website-content/pages/resources.html
@@ -54,25 +54,7 @@
         <section>
             <h2>[Lesson plans]</h2>
             <p>[Short description]</p>
-            <div class="card-grid">
-                <div class="card">
-                    <h4>[Chapter 1]</h4>
-                    <p>[One-line description]</p>
-                    <a href="#" class="btn">[Link]</a>
-                </div>
-                
-                <div class="card">
-                    <h4>[Chapter 2]</h4>
-                    <p>[One-line description]</p>
-                    <a href="#" class="btn">[Link]</a>
-                </div>
-                
-                <div class="card">
-                    <h4>[Chapter 3]</h4>
-                    <p>[One-line description]</p>
-                    <a href="#" class="btn">[Link]</a>
-                </div>
-            </div>
+            <div class="card-grid" data-resource-list></div>
         </section>
     </main>
 
