--- a/website-content/pages/home.html
+++ b/website-content/pages/home.html
@@ -1,48 +1,48 @@
 <section class="hero">
-    <h2>Welcome to Grade 10 CBC Mathematics</h2>
-    <p>Your comprehensive resource hub for Kenya's Competency-Based Curriculum mathematics education.</p>
-    <p>Access curriculum materials, Moodle courses, and detailed lesson plans all in one place.</p>
-</section>
-
-<section class="hero">
-    <h2>[Main headline]</h2>
-    <p>[Short intro text for the landing page.]</p>
-</section>
-
-<section class="logo-strip">
-    <div class="logo-row">
-        <img src="../images/logos/INNODEMS_logo.png" alt="INNODEMS logo">
-        <img src="../images/logos/KMS_logo.png" alt="Kenya Mathematical Society logo">
-        <img src="../images/logos/IDEMS_logo.png" alt="IDEMS International logo">
+    <h2>Grade 10 Mathematics</h2>
+    <p>This project aims to co-create a set of resources for the Grade 10 Mathematics CBC curriculum. It is based on an interactive online textbook, also available offline and as a printable file, and certified courses on:</p>
+    <ul>
+        <li>Textbook content review</li>
+        <li>Lesson plans and step-by-step guides for each topic in the curriculum</li>
+    </ul>
+    <div class="key-contacts">
+        <div class="key-contacts-title">Key contacts</div>
+        <div class="key-contacts-row">
+            <div>Dr. Michael Obiero</div>
+            <div><a href="mailto:obiero@maseno.ac.ke">obiero@maseno.ac.ke</a></div>
+            <div>+254737456117</div>
+        </div>
+        <div class="key-contacts-row">
+            <div>Zachariah Mbasu</div>
+            <div><a href="mailto:zmbasu@innodems.org">zmbasu@innodems.org</a></div>
+            <div>+254722124199</div>
+        </div>
     </div>
-    <p class="logo-caption">Developped jointly by INNODEMS, the Kenya Mathematical Society (KMS), and IDEMS International</p>
 </section>
 
 <section class="quick-links">
-    <h2>[Quick access]</h2>
-    <div class="card-grid">
-        <div class="card">
-            <h3>[Primary resource]</h3>
-            <p>[One-line description]</p>
-            <a href="#" class="btn btn-primary">[Button]</a>
-        </div>
-        
-        <div class="card">
-            <h3>[Secondary resource]</h3>
-            <p>[One-line description]</p>
-            <a href="#" class="btn btn-primary">[Button]</a>
-        </div>
-        
-        <div class="card">
-            <h3>[Lesson plans]</h3>
-            <p>[One-line description]</p>
-            <a href="../pages/resources.html" class="btn btn-primary">[Button]</a>
-        </div>
+    <h2>Quick access resources</h2>
+    <p class="quick-links-note">
+        A full list of resources can be found in the <a href="website-content/pages/resources.html">Resources section</a>.
+    </p>
+
+    <div class="carousel" data-carousel>
+        <button class="carousel-btn prev" type="button" aria-label="Scroll left">◀</button>
+
+        <div class="carousel-track" data-resource-carousel></div>
+
+        <button class="carousel-btn next" type="button" aria-label="Scroll right">▶</button>
     </div>
 </section>
 
 <section class="about-preview">
-    <h2>[About section]</h2>
-    <p>[Short project summary.]</p>
-    <a href="../pages/about.html" class="btn btn-secondary">[Learn more]</a>
+    <h2>About this project</h2>
+    <div class="logo-row about-logos">
+        <img src="website-content/images/logos/INNODEMS_logo.png" alt="INNODEMS logo">
+        <img src="website-content/images/logos/KMS_logo.png" alt="Kenya Mathematical Society logo">
+        <img src="website-content/images/logos/IDEMS_logo.png" alt="IDEMS International logo">
+    </div>
+    <p class="logo-caption">Developped jointly by INNODEMS, the Kenya Mathematical Society (KMS), and IDEMS International</p>
+    <p class="about-note">Teachers or Individuals who contribute actively to the co-creation of resources will be acknowledged here.</p>
+    <a href="website-content/pages/about.html" class="btn btn-secondary about-cta">Full details</a>
 </section>
