Progress with the Resources Page

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="website-content/pages/resources.html">Resources</a></li>
-                    <li><a href="website-content/pages/about.html">About</a></li>
+                    <li><a href="index.html?page=resources">Resources</a></li>
+                    <li><a href="index.html?page=about">About</a></li>
                 </ul>
             </nav>
         </div>
