--- a/website-content/pages/home.html
+++ b/website-content/pages/home.html
@@ -23,7 +23,7 @@
 <section class="quick-links">
     <h2>Quick access resources</h2>
     <p class="quick-links-note">
-        A full list of resources can be found in the <a href="website-content/pages/resources.html">Resources section</a>.
+        A full list of resources can be found in the <a href="index.html?page=resources">Resources section</a>.
     </p>
 
     <div class="carousel" data-carousel>
@@ -44,5 +44,5 @@
     </div>
     <p class="logo-caption">Developped jointly by INNODEMS, the Kenya Mathematical Society (KMS), and IDEMS International</p>
     <p class="about-note">Teachers or Individuals who contribute actively to the co-creation of resources will be acknowledged here.</p>
-    <a href="website-content/pages/about.html" class="btn btn-secondary about-cta">Full details</a>
+    <a href="index.html?page=about" class="btn btn-secondary about-cta">Full details</a>
 </section>
