--- a/website-content/pages/resources.html
+++ b/website-content/pages/resources.html
@@ -1,70 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Access all CBC Grade 10 Mathematics resources - textbooks, courses, and lesson plans">
-    <title>Resources - CBC Kenya Mathematics</title>
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/navigation.css">
-</head>
-<body>
-    <header>
-        <div class="header-content">
-            <div class="logo-section">
-                <!-- Add your logo here -->
-                <!-- <img src="../images/logos/logo.png" alt="CBC Kenya Mathematics Logo"> -->
-                <h1 class="site-title">CBC Kenya Mathematics</h1>
-            </div>
-            
-            <div class="menu-toggle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            
-            <nav>
-                <ul>
-                    <li><a href="../../index.html">Home</a></li>
-                    <li><a href="resources.html">Resources</a></li>
-                    <li><a href="about.html">About</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+<section class="hero">
+    <h2>Resources</h2>
+    <p>This page brings together three types of resources:</p>
+    <ul>
+        <li>Textbooks</li>
+        <li>A single course on improving the textbooks</li>
+        <li>Individual courses with lesson plans and step-by-step guides for each topic in the curriculum</li>
+    </ul>
+    <p>Completion of the courses requires active participation and will be certified by The Kenya Mathematical Society, INNODEMS, and IDEMS International.</p>
+</section>
 
-    <main>
-        <section class="hero">
-            <h2>[Resources headline]</h2>
-            <p>[Short intro for the resources page.]</p>
-        </section>
+<section>
+    <h2>Resource list</h2>
 
-        <section>
-            <h2>[Resource category 1]</h2>
-            <p>[Short description]</p>
-            <a href="#" class="btn btn-primary">[Primary link]</a>
-        </section>
+    <div class="resource-list" data-resource-list></div>
+</section>
 
-        <section>
-            <h2>[Resource category 2]</h2>
-            <p>[Short description]</p>
-            <a href="#" class="btn btn-primary">[Primary link]</a>
-        </section>
-
-        <section>
-            <h2>[Lesson plans]</h2>
-            <p>[Short description]</p>
-            <div class="card-grid" data-resource-list></div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2026 CBC Kenya Mathematics | Licensed under <a href="http://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a></p>
-            <p>Supporting quality mathematics education in Kenya</p>
-        </div>
-    </footer>
-
-    <script src="../js/navigation.js"></script>
-</body>
-</html>
