Add WhatsApp group and course list

--- a/website-content/pages/home.html
+++ b/website-content/pages/home.html
@@ -1,6 +1,6 @@
 <section class="hero">
     <h2>Grade 10 Mathematics</h2>
-    <p>This project aims to co-create a set of resources for the Grade 10 Mathematics CBC curriculum. It is based on an interactive online textbook, also available offline and as a printable file, and certified courses on:</p>
+    <p>This project aims to co-create a set of resources for the Grade 10 Mathematics CBE curriculum. It is based on an interactive online textbook, also available offline and as a printable file, and certified courses on:</p>
     <ul>
         <li>Textbook content review</li>
         <li>Lesson plans and step-by-step guides for each topic in the curriculum</li>
@@ -42,7 +42,7 @@
         <img src="website-content/images/logos/KMS_logo.png" alt="Kenya Mathematical Society logo">
         <img src="website-content/images/logos/IDEMS_logo.png" alt="IDEMS International logo">
     </div>
-    <p class="logo-caption">Developped jointly by INNODEMS, the Kenya Mathematical Society (KMS), and IDEMS International</p>
+    <p class="logo-caption">Developed jointly by INNODEMS, the Kenya Mathematical Society (KMS), and IDEMS International</p>
     <p class="about-note">Teachers or Individuals who contribute actively to the co-creation of resources will be acknowledged here.</p>
     <a href="index.html?page=about" class="btn btn-secondary about-cta">Full details</a>
 </section>
