--- a/website-content/pages/home.html
+++ b/website-content/pages/home.html
@@ -23,7 +23,7 @@
 <section class="quick-links">
     <h2>Quick access resources</h2>
     <p class="quick-links-note">
-        A full list of resources can be found in the <a href="index.html?page=resources">Resources section</a>.
+        A full list of resources can be found in the <a href="index.html?page=resources-textbooks">Resources section</a>.
     </p>
 
     <div class="carousel" data-carousel>
