restructured the home page

--- a/website-content/pages/home.html
+++ b/website-content/pages/home.html
@@ -1,10 +1,6 @@
 <section class="hero">
-    <h2>Grade 10 Mathematics</h2>
-    <p>This project aims to co-create a set of resources for the Grade 10 Mathematics CBC curriculum. It is based on an interactive online textbook, also available offline and as a printable file, and certified courses on:</p>
-    <ul>
-        <li>Textbook content review</li>
-        <li>Lesson plans and step-by-step guides for each topic in the curriculum</li>
-    </ul>
+    <h2>Grade 10 CBC Mathematics Project</h2>
+    <p>Welcome to the Grade 10 CBC Mathematics Project. It aims to facilitate collaboration between teachers, educators, and academics to build on existing resources for the teaching and learning of Grade 10 Mathematics in Kenya.</p>
     <div class="key-contacts">
         <div class="key-contacts-title">Key contacts</div>
         <div class="key-contacts-row">
@@ -20,29 +16,35 @@
     </div>
 </section>
 
-<section class="quick-links">
-    <h2>Quick access resources</h2>
-    <p class="quick-links-note">
-        A full list of resources can be found in the <a href="index.html?page=resources-textbooks">Resources section</a>.
-    </p>
-
-    <div class="carousel" data-carousel>
-        <button class="carousel-btn prev" type="button" aria-label="Scroll left">◀</button>
-
-        <div class="carousel-track" data-resource-carousel></div>
-
-        <button class="carousel-btn next" type="button" aria-label="Scroll right">▶</button>
-    </div>
-</section>
-
 <section class="about-preview">
-    <h2>About this project</h2>
+    <h2>About the Project</h2>
+    <p>The team behind the project has created a set of teaching and learning resources that span the entire Grade 10 CBC Mathematics curriculum.</p>
+    <p><strong>These resources are organised into three complementary strands:</strong></p>
+    
+    <div class="card-grid resource-type-grid">
+        <div class="card resource-type-card">
+            <h3>Interactive textbook</h3>
+            <p>An online interactive textbook that spans the entire curriculum, with carefully designed questions that provide instantaneous targeted feedback to students. The textbook can also be available in offline and printable formats.</p>
+            <a href="index.html?page=resources-textbooks" class="btn btn-primary">See resources</a>
+        </div>
+        <div class="card resource-type-card">
+            <h3>Training courses</h3>
+            <p>A set of certified training courses that support teachers to navigate Curriculum Based Mathematics education, and guides on how to review, contribute to, and strengthen the resources.</p>
+            <a href="index.html?page=resources-training" class="btn btn-primary">See resources</a>
+        </div>
+        <div class="card resource-type-card">
+            <h3>Lesson plan courses</h3>
+            <p>Full lesson plans and step-by-step guides for each topic in the curriculum, and corresponding certified courses to help improve the resources collaboratively and help the team understand the different needs in the various contexts in Kenya.</p>
+            <a href="index.html?page=resources-lesson-plans-numbers" class="btn btn-primary">See resources</a>
+        </div>
+    </div>
+
     <div class="logo-row about-logos">
         <img src="website-content/images/logos/INNODEMS_logo.png" alt="INNODEMS logo">
         <img src="website-content/images/logos/KMS_logo.png" alt="Kenya Mathematical Society logo">
         <img src="website-content/images/logos/IDEMS_logo.png" alt="IDEMS International logo">
     </div>
-    <p class="logo-caption">Developped jointly by INNODEMS, the Kenya Mathematical Society (KMS), and IDEMS International</p>
+    <p class="logo-caption">Developed jointly by INNODEMS, the Kenya Mathematical Society (KMS), and IDEMS International</p>
     <p class="about-note">Teachers or Individuals who contribute actively to the co-creation of resources will be acknowledged here.</p>
-    <a href="index.html?page=about" class="btn btn-secondary about-cta">Full details</a>
+    <a href="index.html?page=about" class="btn btn-primary about-cta">Full details</a>
 </section>
