Adjust layout and menu styling

--- a/website-content/pages/home.html
+++ b/website-content/pages/home.html
@@ -33,7 +33,7 @@
             <a href="index.html?page=resources-training" class="btn btn-primary">See resources</a>
         </div>
         <div class="card resource-type-card">
-            <h3>Lesson plan courses</h3>
+            <h3>Lesson plans, guides and courses</h3>
             <p>Full lesson plans and step-by-step guides for each topic in the curriculum, and corresponding certified courses to help improve the resources collaboratively and help the team understand the different needs in the various contexts in Kenya.</p>
             <a href="index.html?page=resources-lesson-plans-numbers" class="btn btn-primary">See resources</a>
         </div>
