--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <li><a href="index.html?page=resources-textbooks">Textbooks</a></li>
                             <li><a href="index.html?page=resources-training">Training Courses</a></li>
                             <li class="has-submenu">
-                                <a href="#" data-menu-toggle>Lesson Plan Courses</a>
+                                <a href="#" data-menu-toggle>Lesson Plans, Guides and Courses</a>
                                 <ul class="submenu">
                                     <li><a href="index.html?page=resources-lesson-plans-numbers">Numbers and Algebra</a></li>
                                     <li><a href="index.html?page=resources-lesson-plans-measurements">Measurements and Geometry</a></li>
