Restructure lesson plan resources with device-aware grouping
- Add deviceAccess flag to resources in lesson-plans-catalog.json
- Group lesson resources into 'with devices' and 'without devices' sections
- Remove chapter intro and lesson summary fields from JSON structure
- Add 'Topic Course:' label with 'Access course' button aligned to right
- Add accordion behavior to auto-close other lessons when one opens
- Update CSS styling for device sections with bordered containers
- Increase font size for course title visibility
- Add resource type icons (📄 for lessons, 🧑‍🏫 for guides)

--- a/website-content/pages/resources-lesson-plans-measurements.html
+++ b/website-content/pages/resources-lesson-plans-measurements.html
@@ -1,15 +1,9 @@
 <section class="hero">
-    <h2>Lesson Plan Courses: Measurements and Geometry</h2>
-    <p>Courses focused on measurement, geometry, and spatial reasoning lesson plans.</p>
+    <h2>Lesson Plans, Guides and Courses: Measurements and Geometry</h2>
+    <p>Explore chapter-specific lesson plans, step-by-step guides, and supporting courses.</p>
 </section>
 
 <section>
-    <h2>Measurements and Geometry courses</h2>
-    <p>[Add a short overview of lesson plan courses focused on measurement, geometry, and spatial reasoning.]</p>
-</section>
-
-<section>
-    <h2>Available lesson plan courses</h2>
-    <p>Browse the current lesson plan courses tagged for Measurements and Geometry.</p>
-    <div class="resource-list" data-resource-list data-resource-type="Lesson plan course"></div>
+    <h2>Measurements and Geometry</h2>
+    <div class="lesson-plan-catalog" data-lesson-plan-chapter="measurements-geometry"></div>
 </section>
