--- a/website-content/pages/resources-lesson-plans-numbers.html
+++ b/website-content/pages/resources-lesson-plans-numbers.html
@@ -1,15 +1,9 @@
 <section class="hero">
-    <h2>Lesson Plan Courses: Numbers and Algebra</h2>
-    <p>Courses focused on number sense, algebraic thinking, and classroom-ready lesson plans.</p>
+    <h2>Lesson Plans, Guides and Courses: Numbers and Algebra</h2>
+    <p>Explore chapter-specific lesson plans, step-by-step guides, and supporting courses.</p>
 </section>
 
 <section>
-    <h2>Numbers and Algebra courses</h2>
-    <p>[Add a short overview of lesson plan courses focused on number sense, algebraic thinking, and related classroom activities.]</p>
-</section>
-
-<section>
-    <h2>Available lesson plan courses</h2>
-    <p>Browse the current lesson plan courses tagged for Numbers and Algebra.</p>
-    <div class="resource-list" data-resource-list data-resource-type="Lesson plan course"></div>
+    <h2>Numbers and Algebra</h2>
+    <div class="lesson-plan-catalog" data-lesson-plan-chapter="numbers-algebra"></div>
 </section>
