--- a/website-content/pages/resources-lesson-plans-statistics.html
+++ b/website-content/pages/resources-lesson-plans-statistics.html
@@ -1,15 +1,9 @@
 <section class="hero">
-    <h2>Lesson Plan Courses: Statistics and Probability</h2>
-    <p>Courses focused on data handling, statistics, and probability lesson plans.</p>
+    <h2>Lesson Plans, Guides and Courses: Statistics and Probability</h2>
+    <p>Explore chapter-specific lesson plans, step-by-step guides, and supporting courses.</p>
 </section>
 
 <section>
-    <h2>Statistics and Probability courses</h2>
-    <p>[Add a short overview of lesson plan courses focused on data handling, statistics, and probability.]</p>
-</section>
-
-<section>
-    <h2>Available lesson plan courses</h2>
-    <p>Browse the current lesson plan courses tagged for Statistics and Probability.</p>
-    <div class="resource-list" data-resource-list data-resource-type="Lesson plan course"></div>
+    <h2>Statistics and Probability</h2>
+    <div class="lesson-plan-catalog" data-lesson-plan-chapter="statistics-probability"></div>
 </section>
