Load lesson plan chapter buttons dynamically from catalog
- Replace single lesson plans button with dynamic buttons for each chapter
- Generate buttons from lesson-plans-catalog.json data
- Standardize button widths across all resource cards (280px max)
- Center button text and vertically align single buttons with multi-button groups
- Add responsive button containers with consistent spacing

--- a/website-content/pages/home.html
+++ b/website-content/pages/home.html
@@ -23,19 +23,23 @@
     
     <div class="card-grid resource-type-grid">
         <div class="card resource-type-card">
-            <h3>Interactive textbook</h3>
-            <p>An online interactive textbook that spans the entire curriculum, with carefully designed questions that provide instantaneous targeted feedback to students. The textbook can also be available in offline and printable formats.</p>
-            <a href="index.html?page=resources-textbooks" class="btn btn-primary">See resources</a>
+            <h3>Textbooks</h3>
+            <p>A textbook spanning the entire Grade 10 CBC mathematics curriculum. The recommended format if devices are availabe is an online interactive textbook that spans the entire curriculum, with carefully designed questions that provide instantaneous targeted feedback to students. The textbook can also be available in offline and printable formats.</p>
+            <div class="resource-type-card-buttons">
+                <a href="index.html?page=resources-textbooks" class="btn btn-primary">See resources</a>
+            </div>
         </div>
         <div class="card resource-type-card">
             <h3>Training courses</h3>
-            <p>A set of certified training courses that support teachers to navigate Curriculum Based Mathematics education, and guides on how to review, contribute to, and strengthen the resources.</p>
-            <a href="index.html?page=resources-training" class="btn btn-primary">See resources</a>
+            <p>A set of certified training courses that support teachers to navigate Competency Based Mathematics education, and guides on how to use, review, contribute to, and strengthen the resources.</p>
+            <div class="resource-type-card-buttons">
+                <a href="index.html?page=resources-training" class="btn btn-primary">See resources</a>
+            </div>
         </div>
         <div class="card resource-type-card">
             <h3>Lesson plans, guides and courses</h3>
             <p>Full lesson plans and step-by-step guides for each topic in the curriculum, and corresponding certified courses to help improve the resources collaboratively and help the team understand the different needs in the various contexts in Kenya.</p>
-            <a href="index.html?page=resources-lesson-plans-numbers" class="btn btn-primary">See resources</a>
+            <div class="lesson-plan-chapter-buttons" data-lesson-plan-chapters></div>
         </div>
     </div>
 
