Add lesson plans data pipeline and update website rendering
- Created CSV-to-JSON conversion script for lesson plans catalog
- Added comprehensive documentation in README for data pipeline workflow
- Updated navigation.js to render hierarchical lesson plan structure with:
  * Chapters, sections, subsections, and topics
  * Conditional nesting based on hasSubtopics flag
  * Learning objectives display with references
  * Moodle course buttons for Real Numbers, Indices and Logarithms, and Quadratic Expressions
  * Coming Soon indicators for unavailable resources
- Added CSS styling for new hierarchical components
- Fixed chapter IDs to match JSON structure
- Included source CSV files (book-structure.csv, file-matching.csv) and generated JSON catalog

--- a/website-content/pages/resources-lesson-plans-measurements.html
+++ b/website-content/pages/resources-lesson-plans-measurements.html
@@ -5,5 +5,5 @@
 
 <section>
     <h2>Measurements and Geometry</h2>
-    <div class="lesson-plan-catalog" data-lesson-plan-chapter="measurements-geometry"></div>
+    <div class="lesson-plan-catalog" data-lesson-plan-chapter="measurements-and-geometry"></div>
 </section>
