--- a/website-content/pages/resources-lesson-plans-numbers.html
+++ b/website-content/pages/resources-lesson-plans-numbers.html
@@ -5,5 +5,5 @@
 
 <section>
     <h2>Numbers and Algebra</h2>
-    <div class="lesson-plan-catalog" data-lesson-plan-chapter="numbers-algebra"></div>
+    <div class="lesson-plan-catalog" data-lesson-plan-chapter="numbers-and-algebra"></div>
 </section>
