--- a/website-content/pages/resources-lesson-plans-statistics.html
+++ b/website-content/pages/resources-lesson-plans-statistics.html
@@ -5,5 +5,5 @@
 
 <section>
     <h2>Statistics and Probability</h2>
-    <div class="lesson-plan-catalog" data-lesson-plan-chapter="statistics-probability"></div>
+    <div class="lesson-plan-catalog" data-lesson-plan-chapter="statistics-and-probability"></div>
 </section>
