Standardize terminology with Oxford comma
- Update all instances of 'Lesson Plans, Guides and Courses' to 'Lesson Plans, Guides, and Courses'
- Improves clarity and consistency across navigation and page titles

--- a/website-content/pages/home.html
+++ b/website-content/pages/home.html
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="card resource-type-card">
-            <h3>Lesson plans, guides and courses</h3>
+            <h3>Lesson plans, guides, and courses</h3>
             <p>Full lesson plans and step-by-step guides for each topic in the curriculum, and corresponding certified courses to help improve the resources collaboratively and help the team understand the different needs in the various contexts in Kenya.</p>
             <div class="lesson-plan-chapter-buttons" data-lesson-plan-chapters></div>
         </div>
