--- a/website-content/pages/resources-lesson-plans-statistics.html
+++ b/website-content/pages/resources-lesson-plans-statistics.html
@@ -1,5 +1,5 @@
 <section class="hero">
-    <h2>Lesson Plans, Guides and Courses: Statistics and Probability</h2>
+    <h2>Lesson Plans, Guides, and Courses: Statistics and Probability</h2>
     <p>Explore chapter-specific lesson plans, step-by-step guides, and supporting courses.</p>
 </section>
 
