Clean up redundancies and improve repository efficiency (#10)
* Clean up redundancies and improve efficiency

- Remove empty/redundant folders (documents/documents, screenshots/screenshots, docs/)
- Remove deprecated resources.html page
- Remove placeholder resources from resources-catalog.json
- Add console logging to all error handlers in navigation.js
- Consolidate accordion initialization functions into single reusable function
- Add comprehensive validation to CSV converter with LO mismatch detection
- Regenerate lesson-plans-catalog.json with validated data

* Add explicit chapter URL mapping to fix ID inconsistency

- Add chapterUrlMap to lesson-plans-catalog.json for explicit ID-to-URL mapping
- Update navigation.js to use explicit mapping instead of string splitting
- Update CSV converter to automatically generate URL mapping
- Mapping is maintainable and robust, with fallback to old behavior

* Standardize terminology with Oxford comma

- Update all instances of 'Lesson Plans, Guides and Courses' to 'Lesson Plans, Guides, and Courses'
- Improves clarity and consistency across navigation and page titles

* Enable smart browser caching for better performance

- Remove 'cache: no-store' directives from all fetch calls
- Browser will now use standard caching with proper validation
- Improves page load performance while still getting updates when deployed
- Users benefit from cached resources when files haven't changed

* Implement modular template for lesson plans pages

- Create single resources-lesson-plans.html template with dynamic content
- Add populateChapterTemplate() function to load chapter-specific data
- Update navigation to use chapter parameter in URLs (page=resources-lesson-plans&chapter=...)
- Update highlightActivePage() to handle chapter parameter
- Remove three redundant chapter-specific HTML files
- Remove chapterUrlMap from catalog (no longer needed)
- Simplify maintenance - single template instead of three separate files

* Restructure doc

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                             <li><a href="index.html?page=resources-textbooks">Textbooks</a></li>
                             <li><a href="index.html?page=resources-training">Training Courses</a></li>
                             <li class="has-submenu">
-                                <a href="#" data-menu-toggle>Lesson Plans, Guides and Courses</a>
+                                <a href="#" data-menu-toggle>Lesson Plans, Guides, and Courses</a>
                                 <ul class="submenu">
-                                    <li><a href="index.html?page=resources-lesson-plans-numbers">Numbers and Algebra</a></li>
-                                    <li><a href="index.html?page=resources-lesson-plans-measurements">Measurements and Geometry</a></li>
-                                    <li><a href="index.html?page=resources-lesson-plans-statistics">Statistics and Probability</a></li>
+                                    <li><a href="index.html?page=resources-lesson-plans&chapter=numbers-and-algebra">Numbers and Algebra</a></li>
+                                    <li><a href="index.html?page=resources-lesson-plans&chapter=measurements-and-geometry">Measurements and Geometry</a></li>
+                                    <li><a href="index.html?page=resources-lesson-plans&chapter=statistics-and-probability">Statistics and Probability</a></li>
                                 </ul>
                             </li>
                         </ul>
