--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <div class="logo-section">
                 <!-- Add your logo here -->
                 <!-- <img src="website-content/images/logos/logo.png" alt="CBC Kenya Mathematics Logo"> -->
-                <h1 class="site-title">CBC Kenya Mathematics</h1>
+                <a href="index.html" class="site-title-link">
+                    <h1 class="site-title">CBC Kenya Mathematics</h1>
+                </a>
             </div>
             
             <div class="menu-toggle">
