Add links to organization logos

--- a/website-content/pages/home.html
+++ b/website-content/pages/home.html
@@ -44,9 +44,15 @@
     </div>
 
     <div class="logo-row about-logos">
-        <img src="website-content/images/logos/INNODEMS_logo.png" alt="INNODEMS logo">
-        <img src="website-content/images/logos/KMS_logo.png" alt="Kenya Mathematical Society logo">
-        <img src="website-content/images/logos/IDEMS_logo.png" alt="IDEMS International logo">
+        <a href="https://innodems.org/" target="_blank" rel="noopener noreferrer" class="logo-link">
+            <img src="website-content/images/logos/INNODEMS_logo.png" alt="INNODEMS logo">
+        </a>
+        <a href="https://kenyamath.org/" target="_blank" rel="noopener noreferrer" class="logo-link">
+            <img src="website-content/images/logos/KMS_logo.png" alt="Kenya Mathematical Society logo">
+        </a>
+        <a href="https://www.idems.international/" target="_blank" rel="noopener noreferrer" class="logo-link">
+            <img src="website-content/images/logos/IDEMS_logo.png" alt="IDEMS International logo">
+        </a>
     </div>
     <p class="logo-caption">Developed jointly by INNODEMS, the Kenya Mathematical Society (KMS), and IDEMS International</p>
     <p class="about-note">Teachers or Individuals who contribute actively to the co-creation of resources will be acknowledged here.</p>
