Add project leader information and update footer licensing
Content additions to home page:
- Added project leader titles for Dr. Michael Obiero (Director INNODEMS, Chair KMS) and Zachariah Mbasu (Director INNODEMS)
- Added contact title styling with visual hierarchy
- Increased spacing between contact entries for better readability

Footer improvements:
- Restructured footer with dual licensing clarification
- Website content under CC BY 4.0
- Educational resources under CC BY-NC-SA 4.0
- Added proper link attributes for external license pages

Styling refinements:
- Reduced about-preview paragraph font size and margins for better content density
- Improved visual hierarchy for contact information

--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2026 CBC Kenya Mathematics | Licensed under <a href="http://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a></p>
-            <p>Supporting quality mathematics education in Kenya</p>
+            <p>&copy; 2026 CBC Kenya Mathematics</p>
+            <p>Website content licensed under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noopener noreferrer">Creative Commons Attribution 4.0 (CC BY 4.0)</a>.</p>
+            <p>Educational resources (including textbooks, lesson plans, and Moodle course materials) licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="noopener noreferrer">Creative Commons Attribution–NonCommercial–ShareAlike 4.0 (CC BY-NC-SA 4.0)</a>.</p>
         </div>
     </footer>
 
