--- a/website-content/pages/home.html
+++ b/website-content/pages/home.html
@@ -1,15 +1,21 @@
 <section class="hero">
     <h2>Grade 10 CBC Mathematics Project</h2>
-    <p>Welcome to the Grade 10 CBC Mathematics Project. It aims to facilitate collaboration between teachers, educators, and academics to build on existing resources for the teaching and learning of Grade 10 Mathematics in Kenya.</p>
+    <p>Welcome to the Grade 10 CBC Mathematics Project. This site provides curriculum-aligned Open Educational Resources and collaborative co-creation spaces for Grade 10 mathematics in Kenya — including textbooks, lesson plans, teacher guides, and professional development courses — under the CBC.</p>
     <div class="key-contacts">
-        <div class="key-contacts-title">Key contacts</div>
+        <div class="key-contacts-title">Project Leaders</div>
         <div class="key-contacts-row">
-            <div>Dr. Michael Obiero</div>
+            <div>
+                <strong>Dr. Michael Obiero</strong>
+                <div class="contact-title">Director, INNODEMS | Chair, Kenya Mathematical Society</div>
+            </div>
             <div><a href="mailto:obiero@maseno.ac.ke">obiero@maseno.ac.ke</a></div>
             <div>+254737456117</div>
         </div>
         <div class="key-contacts-row">
-            <div>Zachariah Mbasu</div>
+            <div>
+                <strong>Zachariah Mbasu</strong>
+                <div class="contact-title">Director, INNODEMS</div>
+            </div>
             <div><a href="mailto:zmbasu@innodems.org">zmbasu@innodems.org</a></div>
             <div>+254722124199</div>
         </div>
@@ -17,28 +23,30 @@
 </section>
 
 <section class="about-preview">
-    <h2>About the Project</h2>
-    <p>The team behind the project has created a set of teaching and learning resources that span the entire Grade 10 CBC Mathematics curriculum.</p>
+    <h2>Supporting Grade 10 Teachers Under the CBC</h2>
+    <p>The Grade 10 CBC Mathematics Project provides curriculum-aligned Open Educational Resources covering the full Grade 10 mathematics syllabus in Kenya. Resources are structured around official learning objectives and developed in accordance with the CBC curriculum framework.</p>
+    <p>Teachers can access interactive and printable textbooks, lesson plans, teacher guides, and certified professional development courses that support continuous professional growth.</p>
+    <p>While the current focus is Grade 10, the project is designed to expand to additional grades over time. All materials are openly licensed and developed through collaboration between Kenyan mathematics educators and institutions, enabling ongoing refinement and shared ownership.</p>
     <p><strong>These resources are organised into three complementary strands:</strong></p>
     
     <div class="card-grid resource-type-grid">
         <div class="card resource-type-card">
             <h3>Textbooks</h3>
-            <p>A textbook spanning the entire Grade 10 CBC mathematics curriculum. The recommended format if devices are availabe is an online interactive textbook that spans the entire curriculum, with carefully designed questions that provide instantaneous targeted feedback to students. The textbook can also be available in offline and printable formats.</p>
+            <p>A textbook covering the full Grade 10 CBC mathematics curriculum. The recommended format is an interactive online textbook with carefully designed questions that provide immediate, targeted feedback to students. Printable and offline versions are also available.</p>
             <div class="resource-type-card-buttons">
-                <a href="index.html?page=resources-textbooks" class="btn btn-primary">See resources</a>
+                <a href="index.html?page=resources-textbooks" class="btn btn-primary">Access Textbooks</a>
             </div>
         </div>
         <div class="card resource-type-card">
             <h3>Training courses</h3>
-            <p>A set of certified training courses that support teachers to navigate Competency Based Mathematics education, and guides on how to use, review, contribute to, and strengthen the resources.</p>
+            <p>A set of certified training courses designed to support teachers in delivering Competency-Based Mathematics education, and in reviewing, contributing to, and strengthening the resources.</p>
             <div class="resource-type-card-buttons">
-                <a href="index.html?page=resources-training" class="btn btn-primary">See resources</a>
+                <a href="index.html?page=resources-training" class="btn btn-primary">Access CPD Courses</a>
             </div>
         </div>
         <div class="card resource-type-card">
             <h3>Lesson plans, guides, and courses</h3>
-            <p>Full lesson plans and step-by-step guides for each topic in the curriculum, and corresponding certified courses to help improve the resources collaboratively and help the team understand the different needs in the various contexts in Kenya.</p>
+            <p>Full lesson plans and step-by-step guides for each topic in the curriculum, aligned to the learning objectives. Corresponding certified courses support collaborative improvement and professional engagement.</p>
             <div class="lesson-plan-chapter-buttons" data-lesson-plan-chapters></div>
         </div>
     </div>
@@ -55,6 +63,6 @@
         </a>
     </div>
     <p class="logo-caption">Developed jointly by INNODEMS, the Kenya Mathematical Society (KMS), and IDEMS International</p>
-    <p class="about-note">Teachers or Individuals who contribute actively to the co-creation of resources will be acknowledged here.</p>
-    <a href="index.html?page=about" class="btn btn-primary about-cta">Full details</a>
+    <p class="about-note">This project is designed as a collaborative, evolving platform. Teachers are encouraged to engage through both the certified CPD courses and the topic-based collaborative courses, where participation in professional discussion and shared reflection contributes directly to the ongoing development of the resources. Active contributors will be recognised in the Contributors section of the project.</p>
+    <a href="index.html?page=about" class="btn btn-primary about-cta">Project Overview</a>
 </section>
